# qrb_ros_interfaces

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml
.github/workflows/: build-check-sdk.yaml  ubuntu-build.yml
action/: AE.action  AudioCommon.action  FollowPath.action
debian/: changelog  control  copyright  rules
inventory_scan_msgs/: CMakeLists.txt  package.xml
inventory_scan_msgs/msg/: ScanResult.msg
inventory_scan_msgs/srv/: ScanControl.srv  ScanPath.srv
msg/: AudioInfo.msg  BatteryInfo.msg  ChargerCmd.msg  CommandCode.msg  CpuInfo.msg  Exception.msg  FileSystem.msg  NearestObject.msg  RolloverEvent.msg  SwapInfo.msg
qrb_ros_amr_msgs/: CMakeLists.txt  package.xml
qrb_ros_amr_msgs/action/: AE.action  Cmd.action
qrb_ros_amr_msgs/msg/: AMRStatus.msg  BatteryInfo.msg  Exception.msg  WheelStatus.msg
qrb_ros_amr_msgs/srv/: AMRMode.srv  API.srv  Mapping.srv  NarrowArea.srv  SubCmd.srv
qrb_ros_audio_service_msgs/: CMakeLists.txt  package.xml
qrb_ros_audio_service_msgs/qrb_ros_audio_common_msgs/msg/: AudioData.msg
qrb_ros_audio_service_msgs/qrb_ros_audio_service_msgs/msg/: AudioInfo.msg
qrb_ros_audio_service_msgs/srv/: AudioRequest.srv
qrb_ros_manipulator_base_msgs/: CMakeLists.txt  package.xml
qrb_ros_manipulator_base_msgs/qrb_arm_msgs/: package.xml
qrb_ros_manipulator_base_msgs/qrb_arm_msgs/srv/: ArmGetMode.srv
qrb_ros_manipulator_base_msgs/qrb_ros_arm_msgs/: package.xml
qrb_ros_manipulator_base_msgs/qti_arm_msgs/srv/: ArmGetTcpPose.srv  ArmMoveTcpPose.srv  ArmSetMode.srv
qrb_ros_manipulator_base_msgs/srv/: ArmTargetReachable.srv
qrb_ros_motion_msgs/: CMakeLists.txt  package.xml
qrb_ros_motion_msgs/action/: ArcMotion.action  CircleMotion.action  LineMotion.action  RectangleMotion.action  RotationMotion.action
qrb_ros_motion_msgs/msg/: MotionStatus.msg  VelocityLevel.msg
qrb_ros_navigation_msgs/: package.xml
qrb_ros_navigation_msgs/srv/: ComputeFollowPath.srv  PositionMode.srv  ReducedTwist.srv  VirtualPath.srv
qrb_ros_pipeline_manager_msgs/: CMakeLists.txt  package.xml
qrb_ros_pipeline_manager_msgs/msg/: NodeInfo.msg
qrb_ros_pipeline_manager_msgs/srv/: Pipeline.srv
qrb_ros_robot_arm_service_msgs/: CMakeLists.txt  package.xml
qrb_ros_robot_arm_service_msgs/action/: ArmServicePlayback.action  ArmServicePoseCompensation.action  ArmServiceRecord.action
qrb_ros_robot_arm_service_msgs/srv/: ArmServiceCheckFile.srv  ArmServiceSaveDeleteFile.srv
qrb_ros_robot_base_msgs/: CMakeLists.txt  package.xml
qrb_ros_robot_base_msgs/msg/: EmergencyEvent.msg  Error.msg
qrb_ros_robot_base_msgs/srv/: EmergencyCmd.srv  Forward.srv  GetBatteryState.srv  GetMotionMode.srv  Rotate.srv  SetControlMode.srv  SetMotionMode.srv
qrb_ros_sensor_service_msgs/: CMakeLists.txt  package.xml
qrb_ros_sensor_service_msgs/srv/: SensorTask.srv
qrb_ros_slam_msgs/: CMakeLists.txt  package.xml
qrb_ros_slam_msgs/msg/: CommandResponse.msg  StatusCode.msg
qrb_ros_system_monitor_msgs/: CMakeLists.txt  package.xml
qrb_ros_system_monitor_msgs/msg/: DiskInfo.msg  MemInfo.msg  SwapItem.msg
qrb_ros_system_monitor_msgs/srv/: SystemInfo.srv
qrb_ros_tensor_list_msgs/debian/: changelog  control
qrb_ros_vision_msgs/: CMakeLists.txt  package.xml
qrb_ros_vision_msgs/msg/: Detection2DWithMask.msg  Detection2DWithMaskArray.msg
qrb_ros_vision_service_msgs/: CMakeLists.txt  package.xml
qrb_ros_vision_service_msgs/action/: QRCodeCase.action
qrb_ros_vision_service_msgs/srv/: VisionTask.srv
srv/: API.srv  AudioRequest.srv  ComputeP2pPath.srv  GetControlMode.srv  Mapping.srv  SlamCommand.srv  SubCmd.srv
