<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qrb_ros_robot_arm_service_msgs</name>
  <version>1.0.0</version>
  <description>arm_service ros2 msgs</description>

  <license>BSD-3-Clause-Clear</license>

  <author email="quic_weijshen@quicinc.com">Weijie Shen</author>
  <maintainer email="quic_weijshen@quicinc.com">Weijie Shen</maintainer>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
