<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qrb_ros_arm_msgs</name>
  <version>0.0.1</version>
  <description>ARM control msg</description>

  <license>BSD-3-Clause-Clear</license>

  <author email="quic_jionzhao@quicinc.com">Jiong Zhao</author>
  <maintainer email="quic_jionzhao@quicinc.com">Jiong Zhao</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
